--- a/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
+++ b/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'EEMIPlatformBundle::layout.html.twig' %}
+{% extends 'DisneylanddisneyBundle::layout.html.twig' %}
 {% block body %}
     <div class="container">
         <div class="row">
@@ -15,10 +15,4 @@
         </div>
     </div>
 
-{% endblock %}
-{% endblock %}
-{% endblock %}
-{% endblock %}
-{% endblock %}
-{% endblock %}
 {% endblock %}
