--- a/src/Disneyland/disneyBundle/Resources/views/layout.html.twig
+++ b/src/Disneyland/disneyBundle/Resources/views/layout.html.twig
@@ -17,7 +17,7 @@
                 <a class="nav-link" href="{{ path('home') }}">Accueil</a>
             </li>
             <li class="nav-item {% block add %}{% endblock %}">
-                <a class="nav-link" href="{{ path('video_add') }}">Ajouter une video</a>
+                <a class="nav-link" href="">Ajouter une video</a>
             </li>
         </ul>
     </div>
