--- a/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
+++ b/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
@@ -1,18 +1,12 @@
 {% extends 'DisneylanddisneyBundle::layout.html.twig' %}
-{% block body %}
-    <div class="container">
-        <div class="row">
-            {% block titleH1 %}
-            {% endblock %}
-            <div class="col-lg-8">
-                {% block left %}
-                {% endblock %}
-            </div>
-            <div class="col-lg-4">
-                {% block right %}
-                {% endblock %}
-            </div>
-        </div>
-    </div>
 
+{% block body %}
+<div class="container">
+    <div class="col-lg-12"  style="background-color: black;height: 100vh">
+
+    </div>
+    <div class="col-lg-12"  style="background-color: black; height: 100vh; margin-top: 200px" >
+
+    </div>
+</div>
 {% endblock %}
