--- a/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
+++ b/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
@@ -47,10 +47,10 @@
         <div class="col-lg-12 contenu">
             <div class="mainContent">
                 <div class="dropdown">
-                    <div class="dropbtn">
+                    <span class="dropbtn">
                         <button class="dropbtn">Les Parcs de Disneyland</button>
                         <img src="{{ asset('img/ic_keyboard_arrow_down_white_24px.svg') }}">
-                    </div>
+                    </span>
 
                     <div class="dropdown-content" style="width: 100%;"">
                         <a href="#">Parc Disneyland </a>
