--- a/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
+++ b/src/Disneyland/disneyBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,20 @@
 {% extends 'DisneylanddisneyBundle::layout.html.twig' %}
 
 {% block body %}
+    <script>
+        $('dpcument').ready(function () {
+
+            var scroll = jQuery( "body" ).scrollTop();
+            var win_height = jQuery( window ).height();
+            var win= win_height+scroll;
+            var elem=jQuery("#parc").offset().top;
+            var elem2=jQuery("#offre").offset().top;
+            var elem3=jQuery("#transport").offset().top;
+
+            console.log(scroll+'   '+win_height+'   '+win);
+            console.log(elem+'   '+elem2+'   '+elem3);
+        })
+    </script>
 <div class="bodyFixe">
     <div class="carousel">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -43,14 +57,14 @@
             </a>
         </div>
     </div>
-    <div class="container">
-        <div class="col-lg-12 contenu">
+    <div class="container" >
+        <div class="col-lg-12 contenu" id="parc">
             <div class="mainContent">
                 <div class="dropdown">
-                    <div class="dropbtn">
+                    <span class="dropbtn">
                         <button class="dropbtn">Les Parcs de Disneyland</button>
                         <img src="{{ asset('img/ic_keyboard_arrow_down_white_24px.svg') }}">
-                    </div>
+                    </span>
 
                     <div class="dropdown-content" style="width: 100%;"">
                         <a href="#">Parc Disneyland </a>
@@ -72,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-12 contenu">
+        <div class="col-lg-12 contenu" id="offre">
             <div class="mainContent">
                 <div class="dropdown">
                     <button class="dropbtn">Dropdown</button>
@@ -97,7 +111,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-12 contenu">
+        <div class="col-lg-12 contenu" id="transport">
             <div class="mainContent">
                 <div class="dropdown">
                     <button class="dropbtn">Dropdown</button>
