--- a/src/Disney/DisneylandBundle/Resources/views/Home/index.html.twig
+++ b/src/Disney/DisneylandBundle/Resources/views/Home/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'DisneylanddisneyBundle::layout.html.twig' %}
+{% extends 'DisneyDisneylandBundle::layout.html.twig' %}
 
 {% block body %}
     <script>
