--- a/src/Disney/DisneylandBundle/Resources/views/Parc/index.html.twig
+++ b/src/Disney/DisneylandBundle/Resources/views/Parc/index.html.twig
@@ -1,20 +1,26 @@
 {% extends 'DisneyDisneylandBundle::layout.html.twig' %}
 
 {% block body %}
-    <div class="col-lg-12">
-        <h1>Les attractions du parc {{ contents.0.parc }}</h1>
-        </br>
-        {% for content in contents %}
-        <div class="row no-gutters">
-            <div class="col-lg-3">
-                <img src="http://cdn1.dlp-media.com/resize/mwImage/1/630/354/75/wdpromedia.disney.go.com/media/wdpro-dlp-assets/prod/fr-fr/system/images/{{ content.image }}" width="300px" height="200px">
+    <div class="container">
+        <div class="col-lg-12">
+            <div class="row justify-content-center">
+                <h1>{{ title }} {{ contents.0.parc }}</h1>
             </div>
-            <div class="col-lg-6">
-                <a href="{{ path ('attraction', {id: content.id }) }}">{{ content.name }}</a>
-            </div>
-        </div>
+
             </br>
-        {% endfor %}
+            {% for content in contents %}
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="http://cdn1.dlp-media.com/resize/mwImage/1/630/354/75/wdpromedia.disney.go.com/media/wdpro-dlp-assets/prod/fr-fr/system/images/{{ content.image }}" width="300px" height="200px">
+                    </div>
+                    <div class="col-lg-7 align-self-center">
+                        <a href="{{ path ('attraction', {id: content.id }) }}">{{ content.name }}</a>
+                    </div>
+                </div>
+                </br>
+            {% endfor %}
+        </div>
     </div>
+
 
 {% endblock %}
